# rust-pq-c-esta-proibido

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  c.json  d.json  docker-compose.yml  run.sh  test.sh
dockerfiles/: backend.Dockerfile  backend.sh  database.Dockerfile  database.sh  httpserver.Dockerfile  httpserver.sh
src/backend/: main.rs
src/database/: client.rs  lib.rs  main.rs
src/httpserver/: main.rs
